--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -78,16 +78,17 @@ body {
 #portfolio {
     background-color: #6081B3;
 }
-#topo a {
+/*#topo a {
     border-radius: 100%;
     position: relative;
     left: 75%;
     top: -6rem;
 
 
-}
+}*/
 #topo img{
-    width: 4rem;
+    width: 3.8rem;
+    padding: 0.5rem;
     height: auto;
     background-color: white;
     border-radius: 100%;
@@ -106,3 +107,24 @@ body {
       
     }
 }*/
+
+.btnsubir {
+    position:fixed;
+    opacity:0;
+    text-align:center;
+  
+    color:#fff;
+    width:47px;
+    height:44px;
+    line-height:44px;
+    right:25px;
+    bottom:-25px;
+    padding-top:2px;
+    border-radius:5px;
+}
+.btnsubir.show {
+    visibility:visible;
+    cursor:pointer;
+    opacity:1;
+    bottom:25px;
+    }
