--- a/css/widescreen.css
+++ b/css/widescreen.css
@@ -90,14 +90,15 @@ body {
     border-radius: 50%;
     margin-left: 6rem;
 }
-#topo a {
+/*#topo a {
     border-radius: 100%;
     position: relative;
     left: 85%;
     top: -6rem;
-}
+}*/
 #topo img{
-    width: 4rem;
+    width: 3.8rem;
+    padding: 0.5rem;
     height: auto;
     background-color: white;
     border-radius: 100%;
@@ -118,3 +119,25 @@ body {
         background-color: blueviolet;
     }
 }*/
+
+.btnsubir {
+    position:fixed;
+    opacity:0;
+    text-align:center;
+  
+    color:#fff;
+    width:47px;
+    height:44px;
+    line-height:44px;
+    right:25px;
+    bottom:-25px;
+    padding-top:2px;
+    border-radius:5px;
+}
+
+.btnsubir.show {
+    visibility:visible;
+    cursor:pointer;
+    opacity:1;
+    bottom:25px;
+    }
